--- a/backend/service-spring/src/main/resources/application.properties
+++ b/backend/service-spring/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-spring.application.name=service-spring
+spring.datasource.url=jdbc:mariadb://localhost:3306/demo
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
