--- a/backend/service-node/.env
+++ b/backend/service-node/.env
@@ -1,5 +1,5 @@
 PORT = 3001
-SECRET_CODE = "bu_Bo_nghIem_Quyen_0810"
+SECRET_CODE = "pet_care_group2_secret_code"
 EXPIRATION_TIME = 60
 
 AUTH_MAIL = "onlydevquyen@gmail.com"
