--- a/frontend/reactjs/package.json
+++ b/frontend/reactjs/package.json
@@ -22,6 +22,7 @@
     "react-bootstrap": "^2.10.2",
     "react-cookie": "^7.2.2",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-input-emoji": "^5.6.6",
     "react-router-dom": "^6.21.2",
